tdf#89794: sw: implement SwXFlatParagraph::getPropertySetInfo()

(regression from d477ff4a81ecba8a77ead5ff1a33d3e3ceed622e)

Change-Id: Ic49d2c14a27d2fb188a1ba5f9a7d8c0180b8de13
(cherry picked from commit a4c121aa4a2f68d36f1ce41e94e8275230ec0866)
Reviewed-on: https://gerrit.libreoffice.org/15792
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>